[Step 5] 로그인시 사용자 목록 출력 기능 추가